fix: page jumps when page is not more than 100vh (#14)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,5 +5,6 @@
 @layer base {
     body {
         word-break: break-word;
+        overflow-y: scroll;
     }
 }
